Archive2/e1/bdebd7088e2edf/output
main.cpp: In instantiation of 'list_mixin<Type, Tag>& list_mixins<Type, Tags>::get_list() [with Tag = main()::some_type; Type = thread; Tags = {all, same_state}]':
main.cpp:34:33:   required from here
main.cpp:17:58: error: invalid static_cast from type 'list_mixins<thread, all, same_state>*' to type 'list_mixin<thread, main()::some_type>*'
         return *static_cast<list_mixin<Type, Tag> *>(this);
                                                          ^
